Aula de Layouts

--- a/Android/TarefaCadastroIntoducaoAndroid/app/src/main/res/layout/activity_main.xml
+++ b/Android/TarefaCadastroIntoducaoAndroid/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cadastro de Funcionário"
+        android:text="@string/titulo"
         android:textSize="25sp"
         android:textAlignment="center"
         android:layout_marginTop="16dp"/>
