--- a/Android/RxJava/app/src/main/res/layout/item.xml
+++ b/Android/RxJava/app/src/main/res/layout/item.xml
@@ -11,7 +11,8 @@
     <TextView
         android:id="@+id/textViewNome"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="52dp"
+        android:gravity="center_vertical"
         android:layout_margin="8dp"
         android:textSize="16sp"
         android:textStyle="bold|italic"
