Exercicio para implementaçao do Android Room

--- a/Android/DrawerNavigation/app/src/main/res/layout/content_main.xml
+++ b/Android/DrawerNavigation/app/src/main/res/layout/content_main.xml
@@ -8,4 +8,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main">
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
