Subindo codigo de aulas passadas

--- a/Android/FirebaseApp/app/src/main/res/layout/activity_login_2.xml
+++ b/Android/FirebaseApp/app/src/main/res/layout/activity_login_2.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login2.Login2Activity">
+    tools:context=".jaum.login2.Login2Activity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
