--- a/Android/FirebaseApp/app/src/main/res/layout/activity_favorites.xml
+++ b/Android/FirebaseApp/app/src/main/res/layout/activity_favorites.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.view.HomeActivity">
+    tools:context=".jaum.home.view.HomeActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
